Acabado Login Facebook y Registro con Mail

--- a/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
@@ -104,6 +104,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.FacebookId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FacebookId)
+        </dd>
+
+        <dt>
             Chef Seleccionado
         </dt>
 
