--- a/Figaro/Figaro/Views/LoginFacebook.xaml
+++ b/Figaro/Figaro/Views/LoginFacebook.xaml
@@ -3,49 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Figaro.Views.LoginFacebook"
              BindingContext="{Binding FacebookViewModel, Source={StaticResource ViewModelLocator}}"
-             Title="Facebook Login"
-             BackgroundColor="White">
+             BackgroundImage="moscow.jpg">
 
   <StackLayout x:Name="MainStackLayout"
-               Padding="8,30">
+                VerticalOptions="Center" HorizontalOptions="Center">
 
-    <StackLayout Orientation="Horizontal"
-                 Padding="0,20,0,50">
-
-      <Image Source="{Binding FacebookProfile.Picture.Data.Url}"
-             HeightRequest="100"
-             WidthRequest="100"
-             VerticalOptions="Start"/>
-
-      <StackLayout Orientation="Vertical">
-
-        <Label Text="{Binding FacebookProfile.Name, StringFormat='Name: {0:N}'}"
-               TextColor="Black"
-               Font="Bold"
-               FontSize="22"/>
-
-        <Label Text="{Binding FacebookProfile.Id, StringFormat='Id: {0:N}'}"
-               TextColor="Black"
-               FontSize="20"/>
-
-        <Label Text="{Binding FacebookProfile.IsVerified, StringFormat='IsVerified: {0:N}'}"
-                  TextColor="Black"
-                  FontSize="22"/>
-
-      </StackLayout>
-
-    </StackLayout>
-
-    <Label Text="{Binding FacebookProfile.AgeRange.Min, StringFormat='AgeRange.Min: {0:N}'}"
-           TextColor="Black"
-           FontSize="22"/>
-
-    <Label Text="{Binding FacebookProfile.Devices[0].Os, StringFormat='Devices: {0:N}'}"
-           TextColor="Black"
-           FontSize="22"/>
-
-    <Image Source="{Binding FacebookProfile.Cover.Source}"
-           HeightRequest="200" />
+    <ActivityIndicator IsRunning="{Binding IsBusy}"
+               IsVisible="{Binding IsBusy}"
+               HeightRequest="50" WidthRequest="50"
+               HorizontalOptions="Center" VerticalOptions="Center"/>
 
   </StackLayout>
 </ContentPage>
