--- a/Figaro/Figaro/Views/LoginMail.xaml
+++ b/Figaro/Figaro/Views/LoginMail.xaml
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Figaro.Views.Login">
-  <ContentPage.Content>
-    <Button Text="Login con Facebook" Clicked="LoginFacebook_OnClicked" />
-  </ContentPage.Content>
+             x:Class="Figaro.Views.LoginMail">
+  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
 </ContentPage>
