--- a/Figaro/Figaro/Views/SeleccionarTipoComida.xaml
+++ b/Figaro/Figaro/Views/SeleccionarTipoComida.xaml
@@ -5,6 +5,7 @@
              xmlns:local="clr-namespace:Figaro;assembly=Figaro;"
              BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
              Title="Figaro"
+             Icon="funnel.png"
              BackgroundColor="#CC0311">
   <MasterDetailPage.Master>
     <ContentPage Title="Figaro">
