--- a/WebServicesFigaro/Views/UsuarioMvc/Create.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Create.cshtml
@@ -58,7 +58,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ZonaId, "ZonaId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ZonaId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("ZonaId", null, "----Selecciona Chef (null)----", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ZonaId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -111,6 +111,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.FacebookId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FacebookId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FacebookId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.ChefSeleccionadoId, "ChefSeleccionadoId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ChefSeleccionadoId", null, "----Selecciona Chef (null)----", htmlAttributes: new { @class = "form-control" })
@@ -121,7 +129,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TipoCocinaId, "TipoCocinaId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TipoCocinaId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("TipoCocinaId", null, "----Selecciona TipoCocina (null)----", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoCocinaId, "", new { @class = "text-danger" })
             </div>
         </div>
