--- a/WebServicesFigaro/Views/UsuarioMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Delete.cshtml
@@ -101,6 +101,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.FacebookId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FacebookId)
+        </dd>
+
+        <dt>
             Chef Seleccionado
         </dt>
 
