--- a/Figaro/Figaro/Views/MainPage.xaml
+++ b/Figaro/Figaro/Views/MainPage.xaml
@@ -6,12 +6,14 @@
   <ContentPage.Content>
     <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0,20">
       <Image Source="logo_figaro.png" Margin="0,40"/>
-      <Button Text="CONECTAR" Clicked="LoginFacebook_OnClicked" Margin="0,10"
-              BackgroundColor="#3b5998" TextColor="White"/>
-      <Button Text="REGÍSTRATE" Clicked="Registrar_OnClicked" Margin="0,10"
-              BackgroundColor="Transparent" BorderColor="White" TextColor="White"/>
-      <Button Text="INICIA SESIÓN" Clicked="Login_OnClicked" Margin="0,20"
-              BackgroundColor="Transparent" BorderColor="Transparent" TextColor="#f7f7f7"/>
+      <Button x:Name="ConectarFace" Text="CONECTAR" Clicked="LoginFacebook_OnClicked" Margin="0,10"
+              BackgroundColor="#3b5998" TextColor="White" IsVisible="False"/>
+      <Button x:Name="Registrarse" Text="REGÍSTRATE" Clicked="Registrar_OnClicked" Margin="0,10"
+              BackgroundColor="Transparent" BorderColor="White" TextColor="White" 
+              IsVisible="False"/>
+      <Button x:Name="IniciarSesion" Text="INICIA SESIÓN" Clicked="Login_OnClicked" Margin="0,20"
+              BackgroundColor="Transparent" BorderColor="Transparent" TextColor="#f7f7f7" 
+              IsVisible="False"/>
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
