--- a/WebServicesFigaro/Views/MenuMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/MenuMvc/Details.cshtml
@@ -135,6 +135,14 @@
             @Html.DisplayFor(model => model.Utensilios)
         </dd>
 
+        <dt>
+            Comentarios
+        </dt>
+
+        <dd>
+            <a href='@string.Format("../../ComentarioPlatoMenuMvc/IndexMenu/{0}", Model.Id)'>Comentarios</a>
+        </dd>
+
     </dl>
 </div>
 <p>
